[package]
name = "nimbus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-cloud-storage = "0"
google-secretmanager1 = "5"
google-cloudtasks2 = "5"
yup-oauth2 = "8"
async-trait = "0"
chrono = "0"
tokio = "1"
infer = "0"
thiserror = "1"

[dev-dependencies]
google-auth-helper = { git = "https://github.com/xAmbit-ai/google-auth-helper" , branch = "main" }

